--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -277,3 +277,19 @@ footer .copyright a:hover {
 #blog-container .post-text:hover {
     color: coral;
 }
+
+.banner-about {
+    background-image: url(../img/banner/parallax.jpg);
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: top 60px center;
+    display: flex;
+    opacity: 0.5;
+    background-repeat: no-repeat;
+}
+
+#featured .about-us {
+    font-weight: bolder;
+    color: black;   
+}
